Fix: reduce logo icon size from 2rem to 1.8rem to provide breathing room elements on sidebar on smaller device

--- a/paleorecipes/static/css/style.css
+++ b/paleorecipes/static/css/style.css
@@ -563,8 +563,8 @@ footer p {
 /* media query to ensure responsiveness on profile page sidebar */
 @media screen and (max-width: 42em) {
     .logo-icon {
-        width: 2rem;
-        height: 2rem;
+        width: 1.8rem;
+        height: 1.8rem;
     }
 }
 
